Completed the frontend and redis docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,20 @@ services:
       - 5000:5000
     depends_on:
       - db
+      - redis
+    restart: unless-stopped
+    networks:
+      - app-network
+
+  frontend:
+    container_name: frontend
+    build:
+      context: ./frontend
+      dockerfile: ./Dockerfile
+    ports:
+      - 3000:5173
+    depends_on:
+      - db
     restart: unless-stopped
     networks:
       - app-network
@@ -30,26 +44,14 @@ services:
     networks:
       - app-network
 
+  redis:
+    image: redis:6.2-alpine
+    restart: always
+    ports:
+      - '6379:6379'
+    volumes: 
+      - ./cache:/data  
+
 networks:
   app-network:
     driver: bridge
-
-
-# a. Backend:
-# i. Need the environment variables from the .env file.
-# ii. Expose 5000 internal port to host machine’s 5000 port.
-# b. Frontend:
-# i. Expose 5173 internal port to host machine’s 3000 port.
-# c. Database:
-# i. Use PostgreSQL for database
-# ii. Make sure data doesn’t go away on the container remove
-# iii. Make sure the database service isn’t exposed to the host
-# machine.
-
-# d. Redis:
-# i. Use Redis for caching
-# ii. Make sure to persist data on container removal.
-# iii. Make sure not to expose any port in the host machine.
-# 6. Use .dockerignore to ignore extra files that should not be copied
-# in the container.
-# 7. Build and test your application
